# nova-creature-llm

./: .gitignore  .nova_llm_config  ANDROID_INSTALL_GUIDE.md  ANDROID_SETUP_TERMUX.sh  CODEX_CLOUD_MANIFEST.json  CODEX_PROMPT_CLOUD_ONLY.txt  QUICK_START_LAPTOP.txt  QUICK_START_PHONE_CONNECT.txt  README_CODEX_CLOUD.md  README_COGNITIVE_OS.md  README_LAPTOP_INSTALL.md  RUN_DICTIONARY_JUMP_TRAIN.sh  SETUP_INSTALL_DEPENDENCIES.sh  START_NOVA_MAC_LINUX.sh  START_NOVA_WINDOWS.bat  fix_remaining.py  generate_batch_c.py  generate_v108_to_v140.py  generate_v701_to_v750.py  generate_v751_to_v775.py  generate_v776_to_v800.py  generate_v801_to_v825.py  generate_v826_to_v900.py  generate_v901_to_v950.py  generate_v951_to_v1000.py  interactive_terminal.py  nova_chat_web.html  nova_chat_web.html.bak  nova_enhanced_server.py  nova_live_server.py  nova_llm_config.json  nova_mobile_app.html  nova_server_android.py  nova_standalone.html  nova_training_dataset.py  nova_training_preflight.py  nova_web_server.py  quick_train.py  requirements-codex.txt  requirements-training.txt  (+7 more)
nova_philosopher_cortex/: README.md  main.py  pyproject.toml  requirements.txt
nova_philosopher_cortex/examples/: demo_conversation.py  demo_math_measurement.py  demo_philosophy.py  demo_research_offline.py
nova_philosopher_cortex/nova/: __init__.py  config.py  final_voice.py  language_cortex.py  memory.py  model_provider.py  model_registry.py  pipeline.py  router_cortex.py  schema.py  training_logger.py  utils.py
nova_philosopher_cortex/reports/: FINAL_BUILD_REPORT.md  REALITY_AUDIT.md  STAGE_0_FOUNDATION.md  (+9 more)
(+4073 files in other folders)
